fix img width in favorites on mobile

--- a/src/css/favorites.css
+++ b/src/css/favorites.css
@@ -150,6 +150,10 @@ body {
   .item-price{
     font-size: 14px;
   }
+  .item__image {
+    width: 75px;
+    height: 75px;
+  }
   .btn-text{
     font-size: 16px;
   }
